--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pizzaria Fantástica</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-	<link rel="stylesheet" href="assets/css/index.css">
+	<link rel="stylesheet" href="/css/index.css">
 	<form action="/busca" method="get">
 		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
 		<button type="submit">Buscar</button>
@@ -16,7 +16,7 @@
 
 	<main>
 		<article>
-			<img src="./assets/img/quatroqueijos.jpg" alt="Quatro Queijos">
+			<img src="/img/quatroqueijos.jpg" alt="Quatro Queijos">
 			<a href="pizza.html">Ver Mais</a>
 			<button>+ Add</button>
 			<div>Quatro Queijos</div>
