--- a/views/pizza.ejs
+++ b/views/pizza.ejs
@@ -5,14 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pizzaria Fantástica</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-	<link rel="stylesheet" href="assets/css/pizza.css">
+	<link rel="stylesheet" href="/css/pizza.css">
 	<main>
 		<h1><%= pizza.nome %></h1>
-		<h2></h2>
-		<img src="assets/img/quatroqueijos.jpg" alt="<%= pizza.nome %>">
+		<h2><%= pizza.preco %></h2>
+		<img src="/img/quatroqueijos.jpg" alt="<%= pizza.nome %>">
 		<div><%= pizza.ingrediente %></div>
 		<button>+ Add</button>
 		<a href="pizza.html" class="prev">&lt;</a>
