--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -14,10 +14,10 @@
 		<button type="submit">Buscar</button>
 	</form>
 
-	<main><%for(p of PizzasJson){ %>
+	<main><%for(p of pizzas){ %>
 		<article>
 			<img src="/img/quatroqueijos.jpg" alt="Quatro Queijos">
-			<a href="pizza.html">Ver Mais</a>
+			<a href="/pizzas/<%= p.id %>">Ver Mais</a>
 			<button>+ Add</button>
 			<div>Quatro Queijos</div>
 			<span>R$ 33,90</span>
