--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -9,18 +9,18 @@
 </head>
 <body>
 	<link rel="stylesheet" href="/css/index.css">
-	<form action="/busca" method="get">
+	<form action="/pizza/busca" method="get">
 		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
 		<button type="submit">Buscar</button>
 	</form>
 
 	<main><%for(p of pizzas){ %>
 		<article>
-			<img src="/img/quatroqueijos.jpg" alt="Quatro Queijos">
+			<img src="<%= p.img%>" alt="<%=p.nome%>">" 
 			<a href="/pizzas/<%= p.id %>">Ver Mais</a>
 			<button>+ Add</button>
-			<div>Quatro Queijos</div>
-			<span>R$ 33,90</span>
+			<div><%=p.nome%></div>
+			<span><%=p.preco%></span>
 		</article>
 	
 	<%}%>
