--- a/views/pizzas.ejs
+++ b/views/pizzas.ejs
@@ -10,7 +10,7 @@
 <body>
 	<link rel="stylesheet" href="/css/index.css">
 	<form action="/pizza/busca" method="get">
-		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="">
+		<input type="text" name="q" placeholder="Qual pizza você procura?" autocomplete="off" value="<%=busca%>">
 		<button type="submit">Buscar</button>
 	</form>
 
@@ -24,74 +24,9 @@
 		</article>
 	
 	<%}%>
-		<!--<article>
-			<img src="./assets/img/pepperoni.jpg" alt="Pepperoni">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Pepperoni</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/fracatu.jpg" alt="Fracatu">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Fracatu</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/calabresa.jpg" alt="Calabresa">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Calabresa</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/marguerita.jpg" alt="marguerita">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Marguerita</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/quatroqueijos.jpg" alt="Quatro Queijos">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Quatro Queijos</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/pepperoni.jpg" alt="Pepperoni">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Pepperoni</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/fracatu.jpg" alt="Fracatu">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Fracatu</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/calabresa.jpg" alt="Calabresa">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Calabresa</div>
-			<span>R$ 33,90</span>
-		</article>
-		<article>
-			<img src="./assets/img/marguerita.jpg" alt="marguerita">
-			<a href="pizza.html">Ver Mais</a>
-			<button>+ Add</button>
-			<div>Marguerita</div>
-			<span>R$ 33,90</span>
-		</article>
 	</main>
-
-	<!--
-	<div class="pizza-nao-encontrada">Nenhuma pizza encontrada. Tente ser menos específico na sua busca.</div>
-	-->
-	
+	<% if (pizzas.length == 0){%>
+        <div class="pizza-nao-encontrada">Nenhuma pizza encontrada. Tente ser menos específico na sua busca.</div>
+    <%}%>
 </body>
 </html>
