--- a/views/pizza.ejs
+++ b/views/pizza.ejs
@@ -13,10 +13,10 @@
 		<h1><%= pizza.nome %></h1>
 		<h2><%= pizza.preco %></h2>
 		<img src="/img/quatroqueijos.jpg" alt="<%= pizza.nome %>">
-		<div><%= pizza.ingrediente %></div>
+		<div><%= pizza.ingredientes %></div>
 		<button>+ Add</button>
-		<a href="pizza.html" class="prev">&lt;</a>
-		<a href="pizza.html" class="next">&gt;</a>
+		<a href="/pizzas/" class="prev">&lt;</a>
+		<a href="/pizzas/" class="next">&gt;</a>
 	</main>
 </body>
 </html>
